# finbertarmy

./: .gitignore  README.md  pyproject.toml
dicts_and_tokenizers/: financial_mask_scores.csv  finroberta_tokenizer.json  finroberta_tokenizer_wo_punctuation.json  lmcd_dict.json  token_counts_10k.json  token_counts_10k_wo_punctuation.json  token_counts_ec.json  token_counts_ec_wo_punctuation.json  token_counts_esg.json  token_counts_esg_wo_punctuation.json  token_counts_finance_corpus.json  token_counts_finance_corpus_wo_punctuation.json  token_counts_wiki_corpus.json  token_counts_wiki_corpus_wo_punctuation.json
finbertarmy/: finbert_modeling.py  utils.py
finroberta/: finroberta_model.py  utils.py
notebooks/: financial_masking_weights.ipynb  test.ipynb
run/: 00_collect_wikipedia_dumps.py  00_train_finroberta_tokenizer.py  01_prepare_fintext_sequences.py  01_prepare_wiki_text_sequences.py  02_train_distilfinbert.py  02_train_finroberta.py  02_train_finroberta_financial_mask.py  03_evaluate_masked_word_accuracy.py  04_finetune_financial_phrasebank.py
